[gd_scene load_steps=7 format=2]

[ext_resource path="res://assetsFB/textures/pixil-frame-0 (1).png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Road.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/ObstacleSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/World.gd" type="Script" id=5]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=6]

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 1, 1.13022 )
texture = ExtResource( 1 )
centered = false

[node name="ObstacleSpawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 640, 0 )

[node name="Road" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 629 )
scale = Vector2( 1, 0.8 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 115, 427 )

[connection signal="body_entered" from="Road/DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]

[editable path="Road"]
